[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "indicative"
authors = [{ name = "Kachain Fuangsung" }, { email = "kachain.f@outlook.com" }]
description = "Pipeline-Oriented Technical Analysis Library"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy >= 2",
    "pandas",
    "tulipy == 0.4.0",
    "multimethod >= 1, < 2",
    "pydantic >= 2, < 3",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "indicative.__version__" }
